Tue May  6 09:03:32 2003  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/modules/GNUACEWorkspaceCreator.pm:

          Reverted my change from Tue May  6 06:54:43 2003.  

Tue May  6 06:54:43 2003  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/modules/GNUACEWorkspaceCreator.pm:

          Simplified the generated Makefile by using the .DEFAULT rule.

Mon May  5 19:06:49 2003  Steve Huston  <shuston@riverace.com>

        * bin/MakeProjectCreator/templates/nmake.mpd: When generating the
          REALCLEAN rule, use a separate erase command for the various
          exe-related files, else multiple files end up being generated in
          a single pair of quotes, making the list appear as a single
          filespec and nothing gets deleted.

Mon May  5 13:34:46 2003  Chad Elliott  <elliott_c@ociweb.com>

        * ace/RMCast/RMCast_Fragment.cpp:
        * ace/RMCast/RMCast_IO_UDP.cpp:
        * ace/RMCast/RMCast_Partial_Message.cpp:
        * ace/RMCast/RMCast_Reassembly.cpp:
        * examples/Reactor/WFMO_Reactor/APC.cpp:
        * examples/Reactor/WFMO_Reactor/Handle_Close.cpp:
        * examples/Reactor/WFMO_Reactor/Multithreading.cpp:
        * examples/Reactor/WFMO_Reactor/Prerun_State_Changes.cpp:
        * examples/Reactor/WFMO_Reactor/Removals.cpp:
        * examples/Reactor/WFMO_Reactor/WFMO_Reactor.mpc:
        * tests/Basic_Types_Test.cpp:

          Fixed build errors and warnings for Windows XP 64-bit.

        * tests/tests.mpc:

          Added the FIFO test.

Mon May  5 17:07:23 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/templates/bor.mpd:
          Just define dllflags, no need to define them to 1

Sun May  4 23:59:41 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

        * ACE-INSTALL.html: Updated MAC OS part of the file as per the Jon
          Zorko's request.

Sun May 16:45:46 UTC 2003  Don Hinton  <dhinton@dresystems.com>
