@@ -82,7 +82,7 @@ Test_Singleton::instance (u_short variety)
   ACE_Object_Manager::at_exit (instances[variety],
                                test_singleton_cleanup,
                                ACE_reinterpret_cast (void *,
-                                 ACE_static_cast (u_long, variety)));
+                                 ACE_static_cast (size_t, variety)));
   return instances[variety];
 }
 
